NEW: 5_sem/matstat_hw: hw4

--- a/5_sem/matstat_hw/MS_HW_2_Lobanova_V_310.ipynb
+++ b/5_sem/matstat_hw/MS_HW_2_Lobanova_V_310.ipynb
@@ -245,29 +245,32 @@
     "    \\overline{X} \\left(1 - \\frac{\\overline{X}}{n}\\right)\n",
     "$$\n",
     "\t\n",
-    "Мы знаем, что $\\overline{X}$ асимптотическая оценка для $EX_i = np$, тогда по теореме Слуцкого\n",
-    "$ \\sqrt{n}\\,(\\hat{p} - p) \\xrightarrow{d} N\\,(0,\\,np\\,(1-p)) \\;\\Rightarrow $\n",
+    "Мы знаем, что $\\overline{X}$ асимптотически нормальная оценка для $EX_i = np$. \n",
+    "\n",
+    "По ЦПТ $ \\sqrt{M}\\,(\\hat{p} - p) \\xrightarrow{d} N\\,(0,\\,\\frac{p\\,(1-p)}{n}) \\;\\Rightarrow $\n",
     "\n",
     "$$\n",
     "    \\Rightarrow\\;\n",
-    "    \\frac{\\sqrt{n}\\,(\\hat{p} - p)}{\\hat{\\sigma}} =\n",
-    "    \\frac{\\sqrt{n}\\,(\\frac{\\overline{X}}{n} - p)}\n",
-    "         {\\sqrt{\\overline{X} \\left(1 - \\frac{\\overline{X}}{n}\\right)}} =\n",
-    "    \\frac{\\overline{X} - np}{\\sqrt{\\overline{X}\\,(n - \\overline{X})}}\n",
+    "    \\sqrt{M}\\frac{\\sqrt{n}\\,(\\hat{p} - p)}{\\sqrt{\\hat{p}(1-\\hat{p})}} =\n",
+    "    \\sqrt{M}\\frac{\\sqrt{n}\\,(\\frac{\\overline{X}}{n} - p)}\n",
+    "         {\\sqrt{\\frac{\\overline{X}}{n} \\left(1 - \\frac{\\overline{X}}{n}\\right)}} =\n",
+    "    \\sqrt{M}\\frac{\\sqrt{n}(\\overline{X} - np)}{\\sqrt{\\overline{X}\\,(n - \\overline{X})}}\n",
     "    \\xrightarrow{d} N\\,(0,\\,1) \\;\\Rightarrow \n",
     "$$\n",
     "\n",
     "$$\n",
     "    \\Rightarrow\n",
     "    P\\,\\left( -u_{\\frac{1+\\gamma}2} \\le  \n",
-    "        \\frac{\\overline{X} - np}{\\sqrt{\\overline{X}\\,(n - \\overline{X})}}\n",
+    "        \\frac{\\sqrt{Mn}(\\overline{X} - np)}{\\sqrt{\\overline{X}\\,(n - \\overline{X})}}\n",
     "        \\le u_{\\frac{1+\\gamma}2} \\right) \n",
     "        \\rightarrow \\gamma\n",
     "    \\Rightarrow\n",
     "    P\\,\\left( \n",
-    "        \\frac1{n} \\left( \\overline{X} - u_{\\frac{1+\\gamma}2}\\,\\sqrt{\\overline{X}\\,(n - \\overline{X})}\n",
+    "        \\frac1{n} \\left( \\overline{X} - u_{\\frac{1+\\gamma}2}\\,\n",
+    "            \\frac{\\sqrt{\\overline{X}\\,(n - \\overline{X})}}{\\sqrt{Mn}}\n",
     "        \\right) \\le p \\le  \n",
-    "        \\frac1{n} \\left( \\overline{X} + u_{\\frac{1+\\gamma}2}\\,\\sqrt{\\overline{X}\\,(n - \\overline{X})}\n",
+    "        \\frac1{n} \\left( \\overline{X} + u_{\\frac{1+\\gamma}2}\\,\n",
+    "            \\frac{\\sqrt{\\overline{X}\\,(n - \\overline{X})}}{\\sqrt{Mn}}\n",
     "    \\right) \\right)\n",
     "    \\Rightarrow\n",
     "$$\n",
@@ -275,8 +278,10 @@
     "$$\n",
     "    \\Rightarrow\n",
     "    \\boxed{ \\left[ \n",
-    "        \\frac1{n} \\left( \\overline{X} - u_{\\frac{1+\\gamma}2}\\,\\sqrt{\\overline{X}\\,(n - \\overline{X})} \\right) \\,;\\,\n",
-    "        \\frac1{n} \\left( \\overline{X} + u_{\\frac{1+\\gamma}2}\\,\\sqrt{\\overline{X}\\,(n - \\overline{X})} \\right) \n",
+    "        \\frac1{n} \\left( \\overline{X} - u_{\\frac{1+\\gamma}2}\\,\n",
+    "             \\frac{\\sqrt{\\overline{X}\\,(n - \\overline{X})}}{\\sqrt{Mn}} \\right) \\,;\\,\n",
+    "        \\frac1{n} \\left( \\overline{X} + u_{\\frac{1+\\gamma}2}\\,\n",
+    "             \\frac{\\sqrt{\\overline{X}\\,(n - \\overline{X})}}{\\sqrt{Mn}} \\right) \n",
     "    \\right] }\n",
     "    \\;\\text{ - ассимптотически доверительный интервал уровня}\\;\\gamma \\quad\n",
     "$$"
@@ -329,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +383,7 @@
        "(48.23656901846908, 51.458809132791416)"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
