EHN: 6_sem/report/report_SLU_Cholesky_mpi: description of solve systems

--- a/6_sem/report/report_SLU_Cholesky_mpi.tex
+++ b/6_sem/report/report_SLU_Cholesky_mpi.tex
@@ -158,7 +158,8 @@ for (j = 0; j < block_lim; j++)
 \end{verbatim}
 
     \hypertarget{calc_x}{Для} 
-    решения $DRx = y$ важно учитывать, что умножение на матрицу $D$ можно производить после подсчета суммы.
+    решения $DRx = y$ важно учитывать, что умножение на матрицу $D$ можно 
+    производить после подсчета суммы.
     
 \begin{verbatim}
 for (i = block_lim - 1; i >= 0; i--)
@@ -296,7 +297,8 @@ for (i = block_lim - 1; i >= 0; i--)
     Пусть $p$ --- количество потоков. Принадлежность столбца потоку определяется так:
     $s$-ый поток обрабатывает столбцы с номерами $s + zp$, где $z \in \mathbb{Z}$. \\
     
-    Для вычислени $R_{is}$ ребуются блоки из столбцов $i$ и $s$, находящиеся строго в предыдущих строках. При чем $s$-ый столбец считается «своим», а $i$-ый принадлежит 
+    Для вычислени $R_{is}$ ребуются блоки из столбцов $i$ и $s$, находящиеся строго в предыдущих строках. 
+    При чем $s$-ый столбец считается «своим», а $i$-ый принадлежит 
     другому потоку, поэтому предалагается каждому потоку иметь копию столбца $i$. \\
     
     Барьеры используются для корректного копирования данных из общей памяти (матрицы $A$),
@@ -345,7 +347,9 @@ for (i = 0; i < block_lim; i++)
     Пусть $p$ --- количество потоков, $i$-ый блок вектора $b$ принадлежит потоку 
     с номером $i\,\%\, p$. \\
     
-    Заметим, что в СЛУ матрица $R$ транспонироана, поэтому при умножении на блоки $R$ всегда подразумевается операция с транспонированным блоком. К тому же, обратный ход Гаусса выполняется с вычитанием не строк, а столбцов. \\
+    Заметим, что в СЛУ матрица $R$ транспонироана, поэтому при умножении на блоки $R$ 
+    всегда подразумевается операция с транспонированным блоком. 
+    К тому же, обратный ход Гаусса выполняется с вычитанием не строк, а столбцов. \\
     
     Получается следующий \hypertarget{th_calc_y}{параллельный алгоритм}: 
     
@@ -383,7 +387,8 @@ for (i = 0; i < block_lim; i++)
     
     Перед началом решения паралельно умножит вектор $y$ на $D^{-1} = D$.
     На $i$-ой итерации обратного хода потоки будут вычислять изменение текущего блока $Y[i]$ 
-    (за счет условного вычитания строк) и складывать результат в разделяемый буферный блочный вектор $S$. После поток с номером $i\,\%\, p$ соберет эти изменения и применит к блоку $Y[i]$. \\
+    (за счет условного вычитания строк) и складывать результат в разделяемый буферный блочный вектор $S$. 
+    После поток с номером $i\,\%\, p$ соберет эти изменения и применит к блоку $Y[i]$. \\
     
     Таким образом, получаем следующий параллельный алгоритм: 
 
@@ -472,7 +477,7 @@ for (i = 0; i < block_lim; i++)
 % Глава4
 \newpage
 \section{MPI блочный метод Холецкого}
-\subsection{Описание MPI блочного разложения Холецкого}
+\subsection{Хранение данных для MPI-реализации блочного разложения Холецкого}
     Отличие MPI-реализации от параллельной блочной, использующей потоки,
     заключается в том, что из одного процесса невозможно иметь доступ
     ко всей матрице. \\
@@ -480,61 +485,78 @@ for (i = 0; i < block_lim; i++)
     Процесс с номером $my\_rank$ считает «своими» блок-столбцы с номером $i\_glob$, 
     для которых выполнено $my\_rank = i\_glob \,\%\, comm\_size$,
     и выделяет для них память.\\
-
-    Для вычислени $R_{is}$ (для матрицы $R$ всегда имеется ввиду глобальная нумерация) требуются блоки из столбцов $i$ и $s$, находящиеся строго в предыдущих строках. Причем $s$-ый столбец считается «своим», а $i$-ый принадлежит 
+    
+    Для упрощения перевода глобальной индексации в локальную, предлагается в процессах
+    выделить память под свою часть матрицы и завести массив указателей на начало каждого 
+    блок-столбца в текущем процессе и инициализировать матрицу относительно него. 
+    Тогда преобразование \textbf{блочной} индексации будет выглядеть следующим образом:
+    \begin{verbatim}
+    i_loc = i_glob
+    j_loc = j_glob / comm_size
+    
+    i_glob = i_loc
+    j_glob = j_loc * comm_size + my_rank
+    \end{verbatim}
+    
+    
+\subsection{Описание MPI блочного разложения Холецкого}
+    Для вычислени $R_{is}$ (для матрицы $R$ всегда имеется ввиду глобальная нумерация) 
+    требуются блоки из столбцов $i$ и $s$, находящиеся строго в предыдущих строках. 
+    Причем $s$-ый столбец считается «своим», а $i$-ый принадлежит 
     другому процессу, поэтому «хозяин» рассылкает каждому процессу столбец $i$. \\
+    
+    У каждого процесса имеется свой экземпляр матрицы $D$.
+    Каждый проесс, имеея столбец $i$, может самомстоятельно посчитать разложение Холецого диагольного 
+    блока $R_{ii}$. Затем обратить его для последубщего использования и обновить соответсвующий ему блок матрицы $D$.
     
     Таким образом, имеем 
     \hypertarget{mpi_alg}{следующий алгоритм}: 
 
 \begin{verbatim}
+
 for (i_glob = 0; i_glob < block_lim; i_glob++)
   {
-    if (i_glob % comm_size == my_rank)
+    if (is_my_column (i_glob))
       copy i_glob-th column to buf_column
     
-    MPI_Bcast (buf_column, m * m * i_glob + m * (m + 1) / 2, 
-               MPI_DOUBLE, i_glob % comm_size, MPI_COMM_WORLD);
+    MPI_Bcast (buf_column, m * m * (i_glob + 1), MPI_DOUBLE, 
+               column_owner (i_glob), MPI_COMM_WORLD);
 
     diag block R_{ii} := buf_column + m * m * i_glob
     calculate diag block R_{ii}
     inverse diag block R_{ii}
-    
-    if (i_glob  % comm_size == my_rank)
-      put diag block R_{ii} and block D_{i}
+
+    if (is_my_column (i_glob))
+      put diag block R_{ii}
         
     for (j_glob = i_glob + 1; j < block_lim; j++)
-      if (j_glob % comm_size == my_rank)
+      if (is_my_column (j_glob))
         calculate block R_{ij}
   }
 \end{verbatim}
 
 
-\newpage
+%\newpage
 \subsection{Описание MPI-решения систем $R^T y = b$ и $DRx = y$}
 
-    По аналогии с MPI блочным разложением определим принадлежность данных процессу:
-    $i$-ый блок вектора $b$ принадлежит потоку с номером $i\,\%\, comm\_size$. \\
+    У каждого процесса храниться копия вектора $b$ и как результат разложения все 
+    обратные к диагольным блокам матрицы $R$, что будет использоваться при решении систем.\\
     
-    Если рассматривать MPI-модернизацию 
-    \hyperlink{th_calc_y}{параллельного алгоритма} решения системы $R^T y = b$, 
-    то она требует большого количества папарных пересылок изменного вектора $b$.
-    Чтобы минимизировать количество пересылок используем следующий MPI-алгоритм: 
+    MPI-алгоритм решения системы $R^T y = b$:
     
 \begin{verbatim}
 for (i_glob = 0; i_glob < block_lim; i_glob++)
   {
     column_lim := m or n%m for last block
-    if (i_glob % comm_size == my_rank)
-      {
-        sum = 0;
-        for (j_glob = 0; j_glob < i_glob; j_glob++)
-          sum += Y[j_glob] * R_{ji}
-          
-        Y[i_glob] = (B[i_glob] - sum) / R_{ii}
-      }
-    MPI_Bcast (Y[i_glob], column_lim, MPI_DOUBLE, 
-              i_glob % commSize, MPI_COMM_WORLD);
+    if (is_my_column (i_glob))
+      Y{i_glob} = B{i_glob} * inv_R_{ii}
+     
+    MPI_Bcast (Y{i_glob}, column_lim, MPI_DOUBLE, 
+               column_owner (i_glob), MPI_COMM_WORLD);
+              
+    for (s_glob = i_glob; s_glob < block_lim; s_glob++)          
+      if (is_my_column (s_glob))
+        B{i_glob} -= R_{is}^T * Y{i_glob}
   }
 \end{verbatim}
 
@@ -543,16 +565,22 @@ for (i_glob = 0; i_glob < block_lim; i_glob++)
 \begin{verbatim}
 for (i_glob = block_lim - 1; i_glob >= 0; i_glob--)
  {
-    copy i_glob-th string to buf_str (MPI_Gatherv)
-    if (my_rank == main_rank)
+    column_lim := m or n%m for last block
+    if (is_my_column (i_glob))
       {
-        sum = 0;
-        for (j_glob = block_lim - 1; j_glob > i_glob; j_glob--)
-          sum += X[j_glob] * buf_string[j_glob];
-        
-        X[i_glob] = D[i_glob] 
-                  * (Y[i_glob] - sum * D[i_glob]) / buf_str[i_glob];
+        copy i_glob-th column to buf_column
+        X{i_glob} = Y{i_glob} * inv_R_{ii}
       }
+     
+    MPI_Bcast (X{i_glob}, column_lim, MPI_DOUBLE, 
+               column_owner (i_glob), MPI_COMM_WORLD);
+
+    MPI_Bcast (buf_column, m * m * (i_glob + 1), MPI_DOUBLE, 
+               column_owner (i_glob), MPI_COMM_WORLD);
+              
+    for (s_glob = 0; s_glob < i_glob; s_glob++)          
+      if (is_my_column (s_glob))
+        Y{i_glob} -= X{i_glob} * buf_column_{s_glob} /* R_{si} */
  }
 \end{verbatim}
     
@@ -566,39 +594,44 @@ for (i_glob = block_lim - 1; i_glob >= 0; i_glob--)
     \begin{itemize}
         \item В разложении:
         \begin{itemize}
-            \item $k$ пересылок - каждая блочная строка будет разослана всем,
+            \item $k$ пересылок - будет разослана всем каждый блочный столбец,
             \item общий объем пересылаемых данных будет $n*(n+1)/2$, то есть равен размеру матрицы.
         \end{itemize}
         \item При вычеслении вектора $y$:
         \begin{itemize}
-            \item $k$ пересылок - каждый новый посчитанный блок будет разослан всем,
+            \item $k$ пересылок - будет разослан всем каждый новый посчитанный блок,
             \item общий объем пересылаемых данных будет $n$, то есть равен размеру вектора.
         \end{itemize}
         \item При вычеслении вектора $x$:
         \begin{itemize}
-            \item $n$ пересылок - на каждой итерации вычисления компоненты вектора 
-                  будет собираться строка матрицы,
-            \item общий объем пересылаемых данных будет $n*(n+1)/2$, то есть равен размеру матрицы.
+            \item $k + k$ пересылок - будет разослан всем каждый новый посчитанный блок
+            и текущий блочный столбец матрицы,
+            \item общий объем пересылаемых данных будет $n + n*(n+1)/2$, 
+            то есть равен размеру матрицы + размер вектора.
         \end{itemize}
         \item Всего:
         \begin{itemize}
-            \item $2k + n$ пересылок,
-            \item общий объем пересылаемых данных равен $n*(n+2)$.
+            \item $4k$ пересылок,
+            \item общий объем пересылаемых данных равен $n*(n+3)$.
         \end{itemize}
     \end{itemize}
     
     \bigskip
-    Оценим объем памяти расходуемый на все процессы:
+    Оценим расходуемый объём памяти. На один процесс имеем:
     \begin{itemize}
-        \item хранение матрицы $A$ --- $n*(n+1)/2$,
         \item хранение матрицы $D$ --- $n$,
-        \item хранение векторов $b, x, y$  --- $3 * n * comm\_size$, \\
-        причем вектор $y$ используется как буфер при вычислении $y$,
-        \item память для буферной блочной строки  --- $n * m * comm\_size$.
+        \item хранение векторов $b, x$  --- $2* n$, \\
+        при решении второй системы вектора $b$ и $x$ меняются ролями,
+        \item хранение обратных матриц к диагольным блокам --- $k * (m * m)$.
+        \item использование буферной блочной строки  --- $n * m$.
+        \item использование вспомиогательных блоков  --- $2 * m * m$.
     \end{itemize}
-    Итого, $0,5\,* n * (n+3) + comm\_size * n * (3 + m)$.
     
-
+    Итого, $3n + 2nm + 2m^2$ на каждый процесс. \\
+    К этому следует учесть хранение матрицы $A$ --- $n*(n+1)/2$ в общем объёме на все процессы. \\
+    
+    По сравнению с параллельной версией количество операций для MPI-реализации 
+    разложения Холецкого не изменилось.
 \end{document}
 
 
